--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,5 +1,46 @@
 body {
-    width: 200px;
+    width: 400px;
+    min-height: 400px;
+    font-family: sans-serif;
+    padding-bottom: 50px;
+}
+
+h1{
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 40px;
+    margin-bottom: 50px;
     text-align: center;
-    font-family: Arial, sans-serif;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.buttons button{
+    width: 48%;
+    height: 35px;
+    cursor: pointer;
+}
+
+h2{
+    margin-top: 35px;
+}
+
+.outputMessage{
+    
+}
+
+h3{
+    margin-top: 25px;
+    border-bottom: 1px solid black;
+}
+
+i{
+    font-weight: 700;
+    font-family: sans-serif;
+    font-size: 12px;
 }
